--- a/index.html
+++ b/index.html
@@ -9,25 +9,46 @@
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             max-width: 900px;
-            margin: 40px auto;
+            margin: 30px auto;
             line-height: 1.6;
             color: #000;
-            padding: 20px;
+            padding: 20px 60px;
             border: 1px solid #eee; /* ページ裏の影 */
             box-shadow: 0 0 10px rgba(0,0,0,0.05);
         }
-        h1, h2, h3 {
-            color: #000; /* AWSの青に近い色 */
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 5px;
+        .info{
+            text-align: right;
+        }
+        .info p {
+            /* pタグの上下のマージンを調整する */
+            margin-top: -10px;
+            margin-bottom: -10px;
+            /* あるいは上下をまとめてリセット */
+            /* margin: 0; */
+        }
+	  /* Docment 大タイトルを調整 */
+	  h1{
+            color: #000; /* タイトル色 */
+            /* border-bottom: 2px solid #007bff;*/ /* 分割線を無くす */
+            /* padding-bottom: 0px; */ /* 分割線間隔調整 */
+            margin-top: 30px; /* タイトル上の間隔調整 */
+            margin-bottom: 0;
+		text-align: center; /* 真ん中揃い */
+	  }
+        /* 中タイトルを調整 */
+        h2 {
+            color: #000;
+            border-bottom: 2px solid #808080;
+            padding-bottom: 10px;
             margin-top: 30px;
         }
-	  /* Titleを調整 */
-	  h1{
-		text-align: center;
-            border-bottom: 3px solid #a3a3a3;
-            padding-bottom: 50px;
-	  }
+        /* 小タイトルを調整 */
+        h3 {
+            color: #000;
+            border-bottom: 1px solid #808080;
+            padding-bottom: 5px;
+            margin-top: 25px;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -44,22 +65,22 @@
         }
         .skill-category {
             font-weight: bold;
-            color: #555;
+            color: #000;
             display: block;
-            margin-top: 30px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
 
     <h1>職務経歴書</h1>
-    <p>連絡先: [＊＊＊＊＊＊] </p>
-    <p>メールアドレス: [＊＊＊＊＊＊] </p>
-    <p>目標職種: クラウドエンジニア (AWS/Azure)</p>
-
+　　<div class="info">
+　　　　<p>山田 太郎</p>
+　　　　<p>2025年11月01日</p>
+　　</div>
     <h2>職務要約</h2>
     <p>
-        SIerでの5年間のシステム開発経験を経て、クラウド技術へ転向。特にAWSを深く学び、インフラ構築の自動化（IaC）に注力。Terraform、Python/Boto3を用いたサーバーレスアーキテクチャの設計・構築経験があります。大規模システムの安定運用とコスト最適化に貢献します。
+　　SIerでの5年間のシステム開発経験を経て、クラウド技術へ転向。特にAWSを深く学び、インフラ構築の自動化（IaC）に注力。Terraform、Python/Boto3を用いたサーバーレスアーキテクチャの設計・構築経験があります。大規模システムの安定運用とコスト最適化に貢献します。
     </p>
 
     <h2>保有スキル</h2>
