--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>職務経歴書</title>
     <style>
-        /* 見やすいフォントと最大幅を設定 */
+        /* Test見やすいフォントと最大幅を設定 */
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             max-width: 900px;
