更改了一部分具体内容

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>職務経歴書</title>
     <style>
-        /* Test見やすいフォントと最大幅を設定 */
+        /* 見やすいフォントと最大幅を設定 */
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             max-width: 900px;
@@ -15,14 +15,15 @@
             padding: 20px 60px;
             border: 1px solid #eee; /* ページ裏の影 */
             box-shadow: 0 0 10px rgba(0,0,0,0.05);
+            text-align: justify;
         }
         .info{
             text-align: right;
         }
         .info p {
             /* pタグの上下のマージンを調整する */
-            margin-top: -10px;
-            margin-bottom: -10px;
+            margin-top: 5px;
+            margin-bottom: 5px;
             /* あるいは上下をまとめてリセット */
             /* margin: 0; */
         }
@@ -32,7 +33,7 @@
             /* border-bottom: 2px solid #007bff;*/ /* 分割線を無くす */
             /* padding-bottom: 0px; */ /* 分割線間隔調整 */
             margin-top: 30px; /* タイトル上の間隔調整 */
-            margin-bottom: 0;
+            margin-bottom: 20px;
 		text-align: center; /* 真ん中揃い */
 	  }
         /* 中タイトルを調整 */
@@ -74,13 +75,13 @@
 <body>
 
     <h1>職務経歴書</h1>
-　　<div class="info">
-　　　　<p>山田 太郎</p>
-　　　　<p>2025年11月01日</p>
-　　</div>
+    <div class="info">
+        <p>厳 昊</p>
+        <p>2025年11月01日</p>
+    </div>
     <h2>職務要約</h2>
     <p>
-　　SIerでの5年間のシステム開発経験を経て、クラウド技術へ転向。特にAWSを深く学び、インフラ構築の自動化（IaC）に注力。Terraform、Python/Boto3を用いたサーバーレスアーキテクチャの設計・構築経験があります。大規模システムの安定運用とコスト最適化に貢献します。
+    これまでITインフラの運用・管理を中心に、エンドユーザー向けのPCキッティング・リプレースからサーバー運用、セキュリティ管理まで幅広く経験してきました。短期間でチームリーダーに昇格し、最大10名規模のチームをまとめながら、計画立案・進捗管理・課題対応・品質維持といったマネジメント力を磨いています。PCリプレース案件では10名のチームを統率し、215台のPC入れ替えを計画通り完了。手順書作成、人員調整、技術支援、進捗・品質管理まで一貫して担当しました。さらに、大手企業のインフラ管理業務では、配属から半年でリーダーに昇格し、複数プロジェクトにおけるセキュリティ運用・保守体制の整備と改善を主導。現場を動かしながら組織全体の安定稼働に貢献してきました。
     </p>
 
     <h2>保有スキル</h2>
