添加了ISFnet的一部分经验

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             color: #000;
             border-bottom: 2px solid #808080;
             padding-bottom: 10px;
-            margin-top: 10px;
+            margin-top: 35px;
         }
         /* 小タイトルを調整 */
         h3 {
@@ -84,37 +84,70 @@
     これまでITインフラの運用・管理を中心に、エンドユーザー向けのPCキッティング・リプレースからサーバー運用、セキュリティ管理まで幅広く経験してきました。短期間でチームリーダーに昇格し、最大10名規模のチームをまとめながら、計画立案・進捗管理・課題対応・品質維持といったマネジメント力を磨いています。PCリプレース案件では10名のチームを統率し、215台のPC入れ替えを計画通り完了。手順書作成、人員調整、技術支援、進捗・品質管理まで一貫して担当しました。さらに、大手企業のインフラ管理業務では、配属から半年でリーダーに昇格し、複数プロジェクトにおけるセキュリティ運用・保守体制の整備と改善を主導。現場を動かしながら組織全体の安定稼働に貢献してきました。
     </p>
 
-    <h2>保有スキル</h2>
+    <h2>活かせる経験・知識・技術</h2>
     <ul>
-        <li><span class="skill-category">クラウド:</span> **AWS (VPC, EC2, S3, RDS, Lambda, EKS)**, Google Cloud (GCP) </li>
-        <li><span class="skill-category">IaC/自動化:</span> **Terraform**, CloudFormation, Ansible, Python (Boto3)</li>
-        <li><span class="skill-category">OS/ミドルウェア:</span> Linux (CentOS/Amazon Linux), Nginx, Docker, Kubernetes</li>
-        <li><span class="skill-category">言語:</span> Python (5年), Bash, Go (学習中)</li>
-        <li><span class="skill-category">資格:</span> AWS 認定ソリューションアーキテクト – アソシエイト (SAA)</li>
+        <li>
+            <span class="skill-category">インフラ運用・セキュリティの専門知識</span>
+            Windows サーバーやネットワーク機器の運用管理に携わり、セキュリティパッチ適用、ID 管理、アクセス権限設定、在庫管理などを定期的に実施。システムの安定稼働とセキュリティ水準の維持に貢献しました。MS SQL Serverの設定変更やアプリケーション導入、テスト、本番移行などにも対応し、運用フェーズ全体を理解しています。
+        </li>
+        <li><span class="skill-category">リーダーシップとマネジメント経験</span>
+            PCリプレースやインフラ運用プロジェクトで 10 名規模のチームを統率。タスク割り振りや進捗管理、トラブル対応、顧客・社内調整を通じて、計画遂行力とチームビルディングスキルを培いました。
+        </li>
+        <li><span class="skill-category">ドキュメント整備・業務改善の推進力</span>
+            未整備だった運用マニュアルを体系化し、OJT 期間を短縮。クラウド運用標準化プロジェクトでは約 30 種類の手順書を作成し、ドキュメント化率 98% を達成。属人化を防ぎ、業務品質の均一化と生産性向上に寄与しました。
+        </li>
+        <li><span class="skill-category">改善提案と実行力</span>
+            現場課題を積極的に発見し、改善提案を即行動に移す姿勢を徹底。報連相を重視し、チーム全体のリスク低減と効率化に継続的に貢献しています。
+        </li>
     </ul>
 
-    <h2>職務経験詳細</h2>
-
-    <h3>株式会社〇〇 (20XX年X月 〜 在職中)</h3>
-    <p>**所属**: インフラソリューション事業部 / **役職**: クラウドエンジニア</p>
-    
-    <h4>プロジェクトA: 顧客向けWebサービスのクラウド移行</h4>
+    <h2>職務経歴詳細</h2>
+    <h3>株式会社アイエスエフネット (2023年04月 〜 2024年10月)</h3>
+    <p>事業内容:  ITインフラの運用・保守を中心に、多岐にわたるサービスを提供する</p>
+    <p>従業員数:  2520名</p>
+    <h4>プロジェクト1:</h4>
+    <h4>大手レコード会社のPCリプレースプロジェクト</h4>
     <table>
-        <tr><th>期間</th><td>20XX年X月 〜 20XX年X月</td></tr>
-        <tr><th>担当フェーズ</th><td>設計、構築、テスト、運用ドキュメント作成</td></tr>
-        <tr><th>技術要素</th><td>**AWS (VPC, EKS, RDS Aurora)**, Terraform, Docker</td></tr>
-        <tr><th>具体的な貢献</th>
+        <tr><th>期間</th><td>2023年07月 〜 2023年09月</td></tr>
+        <tr><th>プロジェクト概要</th><td>大手レコード会社のPCリプレースプロジェクトにおいて、チームリーダーとして参画。手順書およびチェックシートの作成からPCキッティング、オンサイトでの設置・交換作業まで、一連の工程を統括しました。</td></tr>
+        <tr><th>規模</th><td>全16名</td></tr>
+        <tr><th>担当ポジション</th><td>チームリーダー</td></tr>
+        <tr><th>担当フェーズ</th><td>全215台のPCに関する準備・管理・キッティング作業を担当し、人員の調整や進捗管理など、現場運営全体をリードしました。</td></tr>
+        <tr><th>業務内容</th>
             <td>
                 <ul>
-                    <li>Terraformを用いてVPC、サブネット、セキュリティグループなど基盤インフラをコード化。</li>
-                    <li>EKS（Kubernetes）クラスタを構築し、コンテナ化されたアプリケーションのデプロイを自動化。</li>
-                    <li>月間約10%のインフラコスト削減に貢献。</li>
+                    <li>手順書およびチェックシートの作成</li>
+                    <li>215台のPCの準備、キッティング作業および在庫管理</li>
+                    <li>チェックシートを用いた進捗・品質管理</li>
+                    <li>10名体制のチームマネジメント</li>
+                    <li>PCキッティング作業の指示および技術的サポート</li>
+                    <li>作業中の不具合・エラー発生時のエスカレーションおよび問い合わせ対応</li>
+                    <li>作業完了後のログ取得・内容修正</li>
+                    <li>オンサイト作業時のお客様対応および調整</li>
+                    <li>作業完了報告書およびチェックシートの整理・提出</li>
                 </ul>
             </td>
         </tr>
-        <tr><th>習得もの</th><td>ビジネス経験（例）</td></tr>
+        <tr><th>実績・取り組み</th><td>約2か月間にわたるPCリプレース業務において、チームリーダーとして全工程を統括。限られた期間の中で215台のPC入れ替えを計画通り完遂し、人員手配・進捗管理・品質維持を徹底することで、スムーズかつ正確なリプレース作業を実現しました。</td></tr>
+        <tr><th>OS</th><td>Windows 11 Pro</td></tr>
+        <tr><th>ソフトウェア、ツール等</th><td>Microsoft Word, Microsoft Excel, バッチなど</td></tr>
     </table>
-
+    <h2>資格</h2>
+        <tr>
+            <td>
+                <ul>
+                    <li>日本語能力試験 1級（2020年12月 取得）</li>
+                    <li>215台のPCの準備、キッティング作業および在庫管理</li>
+                    <li>チェックシートを用いた進捗・品質管理</li>
+                    <li>10名体制のチームマネジメント</li>
+                    <li>PCキッティング作業の指示および技術的サポート</li>
+                    <li>作業中の不具合・エラー発生時のエスカレーションおよび問い合わせ対応</li>
+                    <li>作業完了後のログ取得・内容修正</li>
+                    <li>オンサイト作業時のお客様対応および調整</li>
+                    <li>作業完了報告書およびチェックシートの整理・提出</li>
+                </ul>
+            </td>
+        </tr>
     <h2>自己PRと学習実績</h2>
     <ul>
         <li>**GitHubポートフォリオ**: <a href="[あなたのGitHubリポジトリURL]" target="_blank">https://github.com/YourName/</a> (構築手順やIaCコードを公開中)</li>
