--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             margin-top: 25px;
         }
         table {
-            width: 100%;
-            border-collapse: collapse;
+            width: 100%; /* 宽度为父容器的 50% */
+            border-collapse: collapse; /* 边框合并 */
             margin-bottom: 20px;
         }
         th, td {
@@ -62,7 +62,19 @@
         }
         th {
             background-color: #f4f4f4;
-            width: 25%;
+        }
+        .standard-table th {
+            width: 25%; /* 表头宽度为25% */
+        }
+        .half-width-table {
+            /* 可以添加一个居中属性，让它看起来更好 */
+            margin-left: auto; 
+            margin-right: auto;
+        }
+        .half-width-table th {
+            /* 如果需要，可以重新定义，例如： */
+            width: 50%;
+            background-color: #ffffff;
         }
         .skill-category {
             font-weight: bold;
@@ -73,17 +85,18 @@
     </style>
 </head>
 <body>
-
+<!-- Title: 職務経歴書 -->
     <h1>職務経歴書</h1>
     <div class="info">
         <p>厳 昊</p>
         <p>2025年11月01日</p>
     </div>
+<!-- 職務要約 -->
     <h2>職務要約</h2>
     <p>
     これまでITインフラの運用・管理を中心に、エンドユーザー向けのPCキッティング・リプレースからサーバー運用、セキュリティ管理まで幅広く経験してきました。短期間でチームリーダーに昇格し、最大10名規模のチームをまとめながら、計画立案・進捗管理・課題対応・品質維持といったマネジメント力を磨いています。PCリプレース案件では10名のチームを統率し、215台のPC入れ替えを計画通り完了。手順書作成、人員調整、技術支援、進捗・品質管理まで一貫して担当しました。さらに、大手企業のインフラ管理業務では、配属から半年でリーダーに昇格し、複数プロジェクトにおけるセキュリティ運用・保守体制の整備と改善を主導。現場を動かしながら組織全体の安定稼働に貢献してきました。
     </p>
-
+<!-- 活かせる経験・知識・技術 -->
     <h2>活かせる経験・知識・技術</h2>
     <ul>
         <li>
@@ -100,14 +113,14 @@
             現場課題を積極的に発見し、改善提案を即行動に移す姿勢を徹底。報連相を重視し、チーム全体のリスク低減と効率化に継続的に貢献しています。
         </li>
     </ul>
-
+<!-- 職務経歴詳細 -->
     <h2>職務経歴詳細</h2>
     <h3>株式会社アイエスエフネット (2023年04月 〜 2024年10月)</h3>
     <p>事業内容:  ITインフラの運用・保守を中心に、多岐にわたるサービスを提供する</p>
     <p>従業員数:  2520名</p>
     <h4>プロジェクト1:</h4>
     <h4>大手レコード会社のPCリプレースプロジェクト</h4>
-    <table>
+     <table class="standard-table">
         <tr><th>期間</th><td>2023年07月 〜 2023年09月</td></tr>
         <tr><th>プロジェクト概要</th><td>大手レコード会社のPCリプレースプロジェクトにおいて、チームリーダーとして参画。手順書およびチェックシートの作成からPCキッティング、オンサイトでの設置・交換作業まで、一連の工程を統括しました。</td></tr>
         <tr><th>規模</th><td>全16名</td></tr>
@@ -131,23 +144,19 @@
         <tr><th>実績・取り組み</th><td>約2か月間にわたるPCリプレース業務において、チームリーダーとして全工程を統括。限られた期間の中で215台のPC入れ替えを計画通り完遂し、人員手配・進捗管理・品質維持を徹底することで、スムーズかつ正確なリプレース作業を実現しました。</td></tr>
         <tr><th>OS</th><td>Windows 11 Pro</td></tr>
         <tr><th>ソフトウェア、ツール等</th><td>Microsoft Word, Microsoft Excel, バッチなど</td></tr>
-    </table>
+    </table> 
+<!-- 資格 -->
     <h2>資格</h2>
-        <tr>
-            <td>
-                <ul>
-                    <li>日本語能力試験 1級（2020年12月 取得）</li>
-                    <li>215台のPCの準備、キッティング作業および在庫管理</li>
-                    <li>チェックシートを用いた進捗・品質管理</li>
-                    <li>10名体制のチームマネジメント</li>
-                    <li>PCキッティング作業の指示および技術的サポート</li>
-                    <li>作業中の不具合・エラー発生時のエスカレーションおよび問い合わせ対応</li>
-                    <li>作業完了後のログ取得・内容修正</li>
-                    <li>オンサイト作業時のお客様対応および調整</li>
-                    <li>作業完了報告書およびチェックシートの整理・提出</li>
-                </ul>
-            </td>
-        </tr>
+         <table class="half-width-table">
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+    </table>
+
     <h2>自己PRと学習実績</h2>
     <ul>
         <li>**GitHubポートフォリオ**: <a href="[あなたのGitHubリポジトリURL]" target="_blank">https://github.com/YourName/</a> (構築手順やIaCコードを公開中)</li>
