表示を修正した

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>職務経歴書</title>
+    <title>職務経歴書 厳昊</title>
     <style>
         /* 見やすいフォントと最大幅を設定 */
         body {
