資格詳細追記

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
     <h2>資格</h2>
          <table class="half-width-table">
         <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>ITパスポート</th><td>2020年12月 取得</td></tr>
+        <tr><th>LPIC レベル1</th><td>2020年12月 取得</td></tr>
+        <tr><th>情報セキュリティマネジメント</th><td>2020年12月 取得</td></tr>
+        <tr><th>基本情報技術者</th><td>2020年12月 取得</td></tr>
+        <tr><th>AZ-900</th><td>2020年12月 取得</td></tr>
         <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
     </table>
 
