資格情報を修正

--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
 <!-- 資格 -->
     <h2>資格</h2>
          <table class="half-width-table">
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
-        <tr><th>ITパスポート</th><td>2020年12月 取得</td></tr>
-        <tr><th>LPIC レベル1</th><td>2020年12月 取得</td></tr>
-        <tr><th>情報セキュリティマネジメント</th><td>2020年12月 取得</td></tr>
-        <tr><th>基本情報技術者</th><td>2020年12月 取得</td></tr>
-        <tr><th>AZ-900</th><td>2020年12月 取得</td></tr>
-        <tr><th>日本語能力試験 1級</th><td>2020年12月 取得</td></tr>
+        <tr><th>日本語能力試験 1級</th><td>2020年12月 合格</td></tr>
+        <tr><th>ITパスポート試験</th><td>2022年11月 合格</td></tr>
+        <tr><th>LPIC レベル1</th><td>2023年06月 合格</td></tr>
+        <tr><th>情報セキュリティーマネジメント試験</th><td>2025年04月 合格</td></tr>
+        <tr><th>基本情報技術者試験</th><td>2025年09月 合格</td></tr>
+        <tr><th>Microsoft 認定: Azure Fundamentals（AZ-900）</th><td>2025年10月 合格</td></tr>
     </table>
 
     <h2>自己PRと学習実績</h2>
