職務詳細を全部追記した。

--- a/index.html
+++ b/index.html
@@ -106,14 +106,19 @@
 <!-- Title: 職務経歴書 -->
     <h1>職務経歴書</h1>
     <div class="info">
+        <p>2025年11月01日 現在</p>
         <p>厳 昊</p>
-        <p>2025年11月01日</p>
+
     </div>
 <!-- 職務要約 -->
     <h2>職務要約</h2>
     <p>
     これまでITインフラの運用・管理を中心に、エンドユーザー向けのPCキッティング・リプレースからサーバー運用、セキュリティ管理まで幅広く経験してきました。短期間でチームリーダーに昇格し、最大10名規模のチームをまとめながら、計画立案・進捗管理・課題対応・品質維持といったマネジメント力を磨いています。PCリプレース案件では10名のチームを統率し、215台のPC入れ替えを計画通り完了。手順書作成、人員調整、技術支援、進捗・品質管理まで一貫して担当しました。さらに、大手企業のインフラ管理業務では、配属から半年でリーダーに昇格し、複数プロジェクトにおけるセキュリティ運用・保守体制の整備と改善を主導。現場を動かしながら組織全体の安定稼働に貢献してきました。
     </p>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
 <!-- 活かせる経験・知識・技術 -->
     <h2>活かせる経験・知識・技術</h2>
     <ul>
@@ -131,19 +136,45 @@
             現場課題を積極的に発見し、改善提案を即行動に移す姿勢を徹底。報連相を重視し、チーム全体のリスク低減と効率化に継続的に貢献しています。
         </li>
     </ul>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>    
+
 <!-- 職務経歴詳細 -->
     <h2>職務経歴詳細</h2>
     <h3>株式会社アイエスエフネット (2023年04月 〜 2024年10月)</h3>
     <p>事業内容:  ITインフラの運用・保守を中心に、多岐にわたるサービスを提供する</p>
     <p>従業員数:  2520名</p>
-    <h4>プロジェクト1:</h4>
+
+<!-- 大手レコード会社のPCリプレースプロジェクト -->
+    <h4>● 案件1:</h4>
     <h4>大手レコード会社のPCリプレースプロジェクト</h4>
      <table class="standard-table">
-        <tr><th>期間</th><td>2023年07月 〜 2023年09月</td></tr>
-        <tr><th>プロジェクト概要</th><td>大手レコード会社のPCリプレースプロジェクトにおいて、チームリーダーとして参画。手順書およびチェックシートの作成からPCキッティング、オンサイトでの設置・交換作業まで、一連の工程を統括しました。</td></tr>
-        <tr><th>規模</th><td>全16名</td></tr>
-        <tr><th>担当ポジション</th><td>チームリーダー</td></tr>
-        <tr><th>担当フェーズ</th><td>全215台のPCに関する準備・管理・キッティング作業を担当し、人員の調整や進捗管理など、現場運営全体をリードしました。</td></tr>
+        <tr><th>期間</th>
+            <td>
+                2023年07月 〜 2023年09月
+            </td>
+        </tr>
+        <tr><th>プロジェクト概要</th>
+            <td>
+                大手レコード会社のPCリプレースプロジェクトにおいて、チームリーダーとして参画。手順書およびチェックシートの作成からPCキッティング、オンサイトでの設置・交換作業まで、一連の工程を統括しました。
+            </td>
+        </tr>
+        <tr><th>規模</th>
+            <td>
+                全16名
+            </td>
+        </tr>
+        <tr><th>担当ポジション</th>
+            <td>
+                チームリーダー
+            </td>
+        </tr>
+        <tr><th>担当フェーズ</th>
+            <td>
+                全215台のPCに関する準備・管理・キッティング作業を担当し、人員の調整や進捗管理など、現場運営全体をリードしました。
+            </td>
+        </tr>
         <tr><th>業務内容</th>
             <td>
                 <ul>
@@ -159,47 +190,327 @@
                 </ul>
             </td>
         </tr>
-        <tr><th>実績・取り組み</th><td>約2か月間にわたるPCリプレース業務において、チームリーダーとして全工程を統括。限られた期間の中で215台のPC入れ替えを計画通り完遂し、人員手配・進捗管理・品質維持を徹底することで、スムーズかつ正確なリプレース作業を実現しました。</td></tr>
-        <tr><th>OS</th><td>Windows 11 Pro</td></tr>
-        <tr><th>ソフトウェア、ツール等</th><td>Microsoft Word, Microsoft Excel, バッチなど</td></tr>
+        <tr><th>実績・取り組み</th>
+            <td>
+                約2か月間にわたるPCリプレース業務において、チームリーダーとして全工程を統括。限られた期間の中で215台のPC入れ替えを計画通り完遂し、人員手配・進捗管理・品質維持を徹底することで、スムーズかつ正確なリプレース作業を実現しました。
+            </td>
+        </tr>
+        <tr><th>OS</th>
+            <td>
+                Windows 11 Pro
+            </td>
+        </tr>
+        <tr><th>ソフトウェア、ツール等</th>
+            <td>
+                Microsoft Word, Microsoft Excel, バッチなど
+            </td>
+        </tr>
+    </table>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
+<!-- 大手建設機器サプライヤ会社のPCリプレースプロジェクト -->
+    <h4>● 案件2:</h4>
+    <h4>大手建設機器サプライヤ会社のPCリプレースプロジェクト</h4>
+     <table class="standard-table">
+        <tr><th>期間</th>
+            <td>
+                2023年09月 〜 2023年10月
+            </td>
+        </tr>
+        <tr><th>プロジェクト概要</th>
+            <td>
+                大手建設機器サプライヤー企業のPCリプレースプロジェクトにおいて、旧PCの管理、新PCのセットアップおよびユーザーからの問い合わせ対応を担当しました。円滑な移行を目的に、機器の管理からユーザーサポートまで一貫して対応しました。
+            </td>
+        </tr>
+        <tr><th>規模</th>
+            <td>
+                全3名
+            </td>
+        </tr>
+        <tr><th>担当ポジション</th>
+            <td>
+                メンバー
+            </td>
+        </tr>
+        <tr><th>担当フェーズ</th>
+            <td>
+                PCの在庫・返却管理、新PCのセッティング、問い合わせ対応など、運用全体を担当しました。
+            </td>
+        </tr>
+        <tr><th>業務内容</th>
+            <td>
+                <ul>
+                    <li>返却品チェックシートの作成および管理</li>
+                    <li>旧PCのBIOSパスワード解除</li>
+                    <li>Excelを用いたPCおよび付属品の台数・回収進捗の管理</li>
+                    <li>付属品不足時のメールによる確認・調整対応</li>
+                    <li>新PCの梱包および発送手続き</li>
+                    <li>社内ユーザーからの問い合わせ対応（メール・電話）</li>
+                    <li>定例会議での進捗報告および課題共有</li>
+                </ul>
+            </td>
+        </tr>
+        <tr><th>実績・取り組み</th>
+            <td>
+               メールや電話でのユーザー問い合わせ対応を通じて、正確かつ迅速に情報を伝達するスキルを習得しました。定例会議での進捗報告を継続的に行い、チーム全体での作業状況の可視化と円滑な業務遂行に貢献しました。
+            </td>
+        </tr>
+        <tr><th>OS</th>
+            <td>
+                Windows 10
+            </td>
+        </tr>
+        <tr><th>ソフトウェア、ツール等</th>
+            <td>
+                Microsoft Excel, Outlook, OneNote, Teamsなど
+            </td>
+        </tr>
+    </table> 
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
+<!-- 国内大手企業向けインフラ運用・セキュリティ管理プロジェクト -->
+    <h4>● 案件3:</h4>
+    <h4>国内大手企業向けインフラ運用・セキュリティ管理プロジェクト</h4>
+     <table class="standard-table">
+        <tr><th>期間</th>
+            <td>
+                2023年10月 〜 2024年10月
+            </td>
+        </tr>
+        <tr><th>プロジェクト概要</th>
+            <td>
+                ITインフラの運用・保守を専門とするグローバルIT企業に所属し、日本国内の複数大手企業を担当。各プロジェクトにおいて、セキュリティ管理業務を中心に、システムの安定稼働と情報保護の維持に取り組みました。
+            </td>
+        </tr>
+        <tr><th>規模</th>
+            <td>
+                全6名
+            </td>
+        </tr>
+        <tr><th>担当ポジション</th>
+            <td>
+                チームリーダー（半年後）
+            </td>
+        </tr>
+        <tr><th>担当フェーズ</th>
+            <td>
+                4つのプロジェクトにおいて、セキュリティインシデントの未然防止を目的に、定められたポリシーに基づき、定期的な検証・運用・保守を実施。セキュリティ対策全体の品質維持と運用改善を担いました。
+            </td>
+        </tr>
+        <tr><th>業務内容</th>
+            <td>
+                <ul>
+                    <li>セキュリティパッチの適用確認および更新管理</li>
+                    <li>セキュリティ関連ツールのアクセス権限管理</li>
+                    <li>サーバーおよびネットワーク機器の在庫管理</li>
+                    <li>アカウントおよびIDのライフサイクル管理</li>
+                    <li>システムのヘルスチェック実施と報告</li>
+                    <li>ネットワーク機器の脆弱性スキャンの実施・結果管理</li>
+                    <li>権限分離の設定・運用管理</li>
+                    <li>プロジェクト方針に基づくセキュリティテスト設計・実施</li>
+                    <li>運用手順書およびマニュアルの作成・改訂</li>
+                    <li>新人教育およびOJT指導</li>
+                    <li>プロジェクト監査・審査対応支援</li>
+                    <li>Excelを用いて、検証結果を自動集計・判定できる簡易的な自動化検証ツールを作成し、作業効率化を実現</li>
+                </ul>
+            </td>
+        </tr>
+        <tr><th>実績・取り組み</th>
+            <td>
+                約1年半にわたりセキュリティ運用業務を担当し、チームマネジメント力、コンプライアンス知識、ビジネスコミュニケーション能力、そして英語での業務遂行スキルを培いました。これらの経験を通じて、情報漏えい防止や情報保護の重要性を深く理解し、常に高いセキュリティ意識をもって業務に取り組んでいます。日々の業務では、グローバル基準のコンプライアンス遵守と品質維持を徹底し、組織全体の信頼性向上に貢献しました。
+            </td>
+        </tr>
+        <tr><th>OS</th>
+            <td>
+                Windows 10
+            </td>
+        </tr>
+        <tr><th>ソフトウェア、ツール等</th>
+            <td>
+                Microsoft Word, Microsoft Excel, Teams, SharePoint, RCP, UAT, Inventory Service, ServiceNowなど
+            </td>
+        </tr>
     </table> 
 
     <!-- 分割线 -->
     <div class="page-bottom-spacer"></div>
 
     <h3>株式会社テクノプロ・IT (2024年11月 〜 現在 )</h3>
-    <p>事業内容:  ITインフラの運用・保守を中心に、多岐にわたるサービスを提供する</p>
-    <p>従業員数:  2520名</p>
-    <h4>プロジェクト1:</h4>
-    <h4>大手レコード会社のPCリプレースプロジェクト</h4>
+    <p>事業内容:  ビジネスアプリケーション、運用における技術開発分野や商品開発分野への技術サービス</p>
+    <p>従業員数:  6593名</p>
+
+    <!-- 大手信託銀行の市場リスク管理システムバージョンアッププロジェクト -->
+    <h4>● 案件1:</h4>
+    <h4>大手信託銀行の市場リスク管理システムバージョンアッププロジェクト</h4>
      <table class="standard-table">
-        <tr><th>期間</th><td>2023年07月 〜 2023年09月</td></tr>
-        <tr><th>プロジェクト概要</th><td>大手レコード会社のPCリプレースプロジェクトにおいて、チームリーダーとして参画。手順書およびチェックシートの作成からPCキッティング、オンサイトでの設置・交換作業まで、一連の工程を統括しました。</td></tr>
-        <tr><th>規模</th><td>全16名</td></tr>
-        <tr><th>担当ポジション</th><td>チームリーダー</td></tr>
-        <tr><th>担当フェーズ</th><td>全215台のPCに関する準備・管理・キッティング作業を担当し、人員の調整や進捗管理など、現場運営全体をリードしました。</td></tr>
+        <tr><th>期間</th>
+            <td>
+                2024年12月 〜 2025年06月
+            </td>
+        </tr>
+        <tr><th>プロジェクト概要</th>
+            <td>
+                市場リスク管理システムで使用しているパッケージソフトのバージョンアップに伴い、最新バージョンに対応したOSおよびSQL Serverへの環境移行を実施。新サーバー構築からデータベース設定、テスト、本番環境設定までを一貫して担当しました。
+            </td>
+        </tr>
+        <tr><th>規模</th>
+            <td>
+                全30名 以上
+            </td>
+        </tr>
+        <tr><th>担当ポジション</th>
+            <td>
+                メンバー
+            </td>
+        </tr>
+        <tr><th>担当フェーズ</th>
+            <td>
+                サーバーアプリケーション構築、データベース設定、機能テスト、本番環境設定、関連ドキュメントの作成を担当。各工程で品質と進捗を意識した運用を行いました。
+            </td>
+        </tr>
         <tr><th>業務内容</th>
             <td>
                 <ul>
-                    <li>手順書およびチェックシートの作成</li>
-                    <li>215台のPCの準備、キッティング作業および在庫管理</li>
-                    <li>チェックシートを用いた進捗・品質管理</li>
-                    <li>10名体制のチームマネジメント</li>
-                    <li>PCキッティング作業の指示および技術的サポート</li>
-                    <li>作業中の不具合・エラー発生時のエスカレーションおよび問い合わせ対応</li>
-                    <li>作業完了後のログ取得・内容修正</li>
-                    <li>オンサイト作業時のお客様対応および調整</li>
-                    <li>作業完了報告書およびチェックシートの整理・提出</li>
+                    <li>新規構築サーバーにおけるアプリケーション構築</li>
+                    <li>インシデント対応およびデータベース設定・調査</li>
+                    <li>単体テストおよび結合テストの実施</li>
+                    <li>本番環境における設定変更および動作確認</li>
+                    <li>システム本番移行作業への参画</li>
+                    <li>作業手順書および基盤関連ドキュメントの作成・整備</li>
                 </ul>
             </td>
         </tr>
-        <tr><th>実績・取り組み</th><td>約2か月間にわたるPCリプレース業務において、チームリーダーとして全工程を統括。限られた期間の中で215台のPC入れ替えを計画通り完遂し、人員手配・進捗管理・品質維持を徹底することで、スムーズかつ正確なリプレース作業を実現しました。</td></tr>
-        <tr><th>OS</th><td>Windows 11 Pro</td></tr>
-        <tr><th>ソフトウェア、ツール等</th><td>Microsoft Word, Microsoft Excel, バッチなど</td></tr>
-    </table> 
+        <tr><th>実績・取り組み</th>
+            <td>
+                サーバーアプリケーション構築をWBS計画よりも前倒しで完了し、スケジュール以上の成果を達成。本番移行時には、指示と計画に基づき移行作業を円滑に遂行しました。エラー発生時には手順書や設計書を徹底活用し、迅速に原因を特定して解決。さらに、事前調査によって論点を整理し、質の高い報連相を徹底することで、チーム内での連携強化と運用フローの品質向上に貢献しました。
+            </td>
+        </tr>
+        <tr><th>OS</th>
+            <td>
+                MS Windows Server 2016, MS Windows Server 2019
+            </td>
+        </tr>
+            <tr><th>DB</th>
+            <td>
+                MS SQL Server
+            </td>
+        </tr>
+            <tr><th>言語</th>
+            <td>
+                SQL
+            </td>
+        </tr>
+        <tr><th>ソフトウェア、ツール等</th>
+            <td>
+                Microsoft Excel, WinMerge, Sakuraエディタ, Amazon WorkSpaces, JP1など
+            </td>
+        </tr>
+    </table>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
+    <!-- 大手鉄道グループ向けクラウド運用業務の標準化・効率化推進プロジェクト -->
+    <h4>● 案件2:</h4>
+    <h4>大手鉄道グループ向けクラウド運用業務の標準化・効率化推進プロジェクト</h4>
+     <table class="standard-table">
+        <tr><th>期間</th>
+            <td>
+                2025年09月 〜 2025年12月（見込み）
+            </td>
+        </tr>
+        <tr><th>プロジェクト概要</th>
+            <td>
+                クラウドシステムの企画・開発・運用を一貫して行う企業において、プロパー社員を「企画・開発」といったコア業務に専念させるため、定型的な「運用業務」を外部委託化するプロジェクトに参画。現場の業務を標準化し、再現性の高い運用体制を構築しました。
+            </td>
+        </tr>
+        <tr><th>規模</th>
+            <td>
+                全10名
+            </td>
+        </tr>
+        <tr><th>担当ポジション</th>
+            <td>
+                メンバー
+            </td>
+        </tr>
+        <tr><th>担当フェーズ</th>
+            <td>
+                現状分析をもとに現場社員へのヒアリングを実施し、属人化していた暗黙知を可視化。標準化された運用フローおよび手順書の設計・作成を主導しました。
+            </td>
+        </tr>
+        <tr><th>業務内容</th>
+            <td>
+                現状把握と暗黙知の抽出
+                <ul>
+                    <li>既存業務の棚卸しを実施し、未手順書化業務の範囲を特定</li>
+                    <li>現場社員へのヒアリングを通じて、属人化していたノウハウを正確に抽出</li>
+                </ul>
+                計画策定とドキュメント作成
+                <ul>
+                    <li>ガントチャートを用いた進捗管理の実施</li>
+                    <li>抽出した情報をもとに、年間運用カレンダー、共通手順書、個別手順書、チェックリストなど約30種類のドキュメントを設計・作成</li>
+                    <li>クラウド環境の設定・運用において、AWS構成管理用のJSONファイル（IAMポリシーのIP制御設定変更など）の作成・更新を担当</li>                    
+                </ul>
+                レビュー・検証・定着化支援
+                <ul>
+                    <li>レビューを経て、実際の作業発生時に手順の有効性を検証</li>
+                    <li>新手順書の活用方法に関するトレーニングや個別フォローを実施し、定着化を支援</li>
+                </ul>
+            </td>
+               
+        </tr>
+        <tr><th>実績・取り組み</th>
+            <td>
+                約30種類の手順書を新規作成し、判断基準を明確化することでドキュメント化率98％を達成。属人化の解消と業務品質の均一化を実現しました。また、運用フォロー体制の整備により不明確な作業を約90％削減し、新人教育に要する時間も大幅に短縮。さらに、フローチャートによる業務フローの可視化を推進し、継続的な改善サイクルの構築と現場負担の軽減に貢献しました。
+            </td>
+        </tr>
+        <tr><th>クラウド基盤</th>
+            <td>
+                Azure, AWS, VMware Cloud On AWS
+            </td>
+        </tr>
+            <tr><th>OS</th>
+            <td>
+                Windows11 Pro, Linux
+            </td>
+        </tr>
+        <tr><th>ソフトウェア、ツール等</th>
+            <td>
+                Microsoft Excel, Microsoft Word, Google Workspace, Teamsなど
+            </td>
+        </tr>
+    </table>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
+<!-- 経験/スキル -->
+    <h2>経験/スキル</h2>
+         <table class="half-width-table">
+        <tr>
+            <th>経験分野（案件）</th>
+            <td>
+                <ul>
+                    <li>運用保守 ２年</li>
+                    <li>構築実装 半年</li>
+                    <li>テスト/移行 半年</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
 <!-- 資格 -->
     <h2>資格</h2>
-         <table class="half-width-table">
+        <table class="half-width-table">
+        <tr><th>普通自動車運転免許（第一種）</th><td></td></tr>
         <tr><th>日本語能力試験 1級</th><td>2020年12月 合格</td></tr>
         <tr><th>ITパスポート試験</th><td>2022年11月 合格</td></tr>
         <tr><th>LPIC レベル 1</th><td>2023年06月 合格</td></tr>
@@ -207,17 +518,19 @@
         <tr><th>基本情報技術者試験</th><td>2025年09月 合格</td></tr>
         <tr><th>Microsoft 認定: Azure Fundamentals（AZ-900）</th><td>2025年10月 合格</td></tr>
     </table>
+    <p>※ AWS 認定ソリューションアーキテクト アソシエイト認定（SAA）合格に向けて学習中</p>
 
+<!-- 分割线 -->
+<div class="page-bottom-spacer"></div>
+
+<!-- 自己PR -->
     <h2>自己PR</h2>
         <p>私の強みは「主体的な改善推進力」と「目標達成に向けた継続的な学習意欲」です。</p>
-        <p>ITインフラ運用・PCキッティング・サーバー構築やセキュリティ管理など、幅広い業務に携わる中で、計画立案から進捗管理、課題解決、品質確保まで一貫して遂行してきました。PCリプレース案件では10名規模のチームリーダーとして、進捗管理、オンサイト作業までを一貫して担い、215台のPC作業を計画通り完遂させました。また、国内大手企業向けインフラ管理業務では、配属半年でリーダーに昇格し、セキュリティ運用・保守体制の構築と改善を主導しました。直近のクラウド運用標準化プロジェクトでは、現場ヒアリングを通じて約30種類の運用手順書を設計・作成し、ドキュメント化率98％を達成。属人化の解消と業務品質の均一化に大きく貢献しました。</p>
+        <p>ITインフラ運用・PCキッティング・サーバー構築やセキュリティ管理など、幅広い業務に携わる中で、計画立案から進捗管理、課題解決、品質確保まで一貫して遂行してきました。PCリプレース案件では10名規模のチームリーダーとして、進捗管理、オンサイト作業までを一貫して担い、215台のPC作業を計画通り完遂させました。また、国内大手企業向けインフラ管理業務では、配属半年でリーダーに昇格し、セキュリティ運用・保守体制の構築と改善を主導しました。直近のクラウド運用標準化プロジェクトでは、現場ヒアリングを通じて約30種類の運用手順書を設計・作成し、ドキュメント化率98%を達成。属人化の解消と業務品質の均一化に大きく貢献しました。</p>
         <p>こうした業務成果は、継続的な学習によって支えられています。私はITへの探求心が強く、実務と並行して計画的に知識習得に励んできました。大学院在学中のITパスポート取得に始まり、キャリアを通じてLPICレベル1、情報セキュリティーマネジメント、基本情報技術者試験、そして直近ではAzure Fundamentalsを取得しています。現在はAWS認定ソリューションアーキテクト アソシエイトの合格に向けて学習中です。</p>
         <p>貴社におきましても、この主体的な改善推進力と業務に必要な知識を自ら学び続ける高い学習意欲を活かし、最新技術を迅速にキャッチアップしながら、プロジェクトの安定稼働と業務効率化に貢献していきたいと考えております。</p>
     <div class="over">
         <p>以上</p>
     </div>
-<!-- <div class="page-bottom-spacer"></div> -->
- <!-- 强制占位符 -->
-
 </body>
 </html>
