--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>職務経歴書 厳昊</title>
     <style>
-        /* 見やすいフォントと最大幅を設定 */
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             max-width: 900px;
@@ -13,47 +12,39 @@
             line-height: 1.6;
             color: #000;
             padding: 20px 60px;
-            border: 1px solid #eee; /* ページ裏の影 */
+            border: 1px solid #eee;
             box-shadow: 0 0 10px rgba(0,0,0,0.05);
-            text-align: justify; /* 両端揃え */
+            text-align: justify;
         }
         .over{
             text-align: right;
         }
         .over p {
-            /* pタグの上下のマージンを調整する */
             margin-top: 100px;
             margin-bottom: 300px;
-            /* あるいは上下をまとめてリセット */
-            /* margin: 0; */
         }
         .info{
             text-align: right;
         }
         .info p {
-            /* pタグの上下のマージンを調整する */
             margin-top: 5px;
             margin-bottom: 5px;
-            /* あるいは上下をまとめてリセット */
-            /* margin: 0; */
         }
-	    /* Docment 大タイトルを調整 */
+	
 	    h1{
-            color: #000; /* タイトル色 */
-            /* border-bottom: 2px solid #007bff;*/ /* 分割線を無くす */
-            /* padding-bottom: 0px; */ /* 分割線間隔調整 */
-            margin-top: 30px; /* タイトル上の間隔調整 */
+            color: #000; 
+            margin-top: 30px; 
             margin-bottom: 20px;
-		text-align: center; /* 真ん中揃い */
+		text-align: center; 
 	    }
-        /* 中タイトルを調整 */
+
         h2 {
             color: #000;
             border-bottom: 2px solid #808080;
             padding-bottom: 10px;
             margin-top: 35px;
         }
-        /* 小タイトルを調整 */
+
         h3 {
             color: #000;
             border-bottom: 1px solid #808080;
@@ -61,8 +52,8 @@
             margin-top: 45px;
         }
         table {
-            width: 100%; /* 宽度为父容器的 50% */
-            border-collapse: collapse; /* 边框合并 */
+            width: 100%; 
+            border-collapse: collapse; 
             margin-bottom: 20px;
         }
         th, td {
@@ -74,15 +65,13 @@
             background-color: #f4f4f4;
         }
         .standard-table th {
-            width: 25%; /* 表头宽度为25% */
+            width: 25%; 
         }
         .half-width-table {
-            /* 可以添加一个居中属性，让它看起来更好 */
             margin-left: auto; 
             margin-right: auto;
         }
         .half-width-table th {
-            /* 如果需要，可以重新定义，例如： */
             width: 50%;
             background-color: #ffffff;
         }
@@ -93,12 +82,8 @@
             margin-top: 20px;
         }
         .page-bottom-spacer {
-                /* 使用 height 属性来定义您想要的空白高度 */
             height: 10px; 
-                /* 确保它不会影响布局，例如清除任何浮动 */
             clear: both; 
-                 /* 确保它不会被打印 */
-                /* @media print { display: none; } */ 
         }
     </style>
 </head>
